--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ckone)
 
 set(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra -Werror -pedantic -g3")
 
-#add_subdirectory(src)
+add_subdirectory(src)
 add_subdirectory(test)
