--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(ckone main.c args.c ckone.c instr.c cpu.c alu.c mmu.c ext.c log.c)
+add_executable(ckone main.c args.c ckone.c instr.c cpu.c alu.c mmu.c ext.c log.c symtable.c)
 
 
