--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(test main.c util.c ../src/log.c test_instr.c ../src/instr.c test_mmu.c ../src/mmu.c test_cpu.c ../src/cpu.c test_alu.c ../src/alu.c ../src/ext.c ../src/ckone.c ../src/args.c)
+add_executable(test main.c util.c ../src/log.c test_instr.c ../src/instr.c test_mmu.c ../src/mmu.c test_cpu.c ../src/cpu.c test_alu.c ../src/alu.c ../src/ext.c ../src/ckone.c ../src/args.c ../src/symtable.c)
 
