--- a/config.h.in
+++ b/config.h.in
@@ -2,4 +2,5 @@
 #define VERSION "@VERSION@"
 #define DEFAULT_MEMORY_SIZE @DEFAULT_MEMORY_SIZE@
 #define DEFAULT_MEMDUMP_COLUMNS @DEFAULT_MEMDUMP_COLUMNS@
+#define DEFAULT_MEMDUMP_BASE @DEFAULT_MEMDUMP_BASE@
 
